--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "build:browser": "browserify browser.js -o public/bundle.js",
     "watch": "parallelshell 'npm run watch:schema' 'npm run watch:browser' 'npm run watch:server'",
     "watch:schema": "onchange schema/schema.js -- npm run build:schema",
-    "watch:browser": "onchange browser.js App.js schema/schema.json -- npm run build:browser",
+    "watch:browser": "onchange browser.js ConferenceApp.js schema/schema.json -- npm run build:browser",
     "watch:server": "nodemon --watch server.js --watch 'schema/*.js' server.js"
   }
 }
